--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   height: 100vh;
   padding-top: 10px;
-  background-color: #1b1b32;
+  background-color: #e5c4c5;
   font-family: Lato, sans-serif;
   display: flex;
   flex-wrap: wrap;
