--- a/src/stylesheets/Screen.css
+++ b/src/stylesheets/Screen.css
@@ -7,7 +7,7 @@
     align-items: center;
     font-weight: bold;
     font-size: 30px;
-    background-color: #0a0a23;
+    background-color: #106c7d;
     color: white;
     padding: 11px 30px 11px 11px;
     margin: 1px solid #888;
