--- a/src/stylesheets/ClearButton.css
+++ b/src/stylesheets/ClearButton.css
@@ -3,7 +3,7 @@
     font-size: 1.6em;
     display: flex;
     flex: 1;
-    background-color: #ac0246;
+    background-color: #106c7d;
     margin-top: 8px;
     justify-content: center;
     align-items: center;
