--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   height: 100vh;
   padding-top: 10px;
-  background-color: #e5c4c5;
-  font-family: Lato, sans-serif;
+  background: #4530A2;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -14,9 +13,10 @@
   width: 300px;
   height: 500px;
   padding: 14px;
-  background-color: #99c9ff;
-  border-radius: 20px;
-  border: 5px solid white;
+  background-color: #C79EF8; 
+  box-shadow: 6px 6px 0px #000000;
+  /* border-radius: 42px; */
+  
 }
 
 .row {
