--- a/src/stylesheets/Screen.css
+++ b/src/stylesheets/Screen.css
@@ -7,7 +7,7 @@
     align-items: center;
     font-weight: bold;
     font-size: 30px;
-    background-color: #106c7d;
+    background-color: #2B3458;
     color: white;
     padding: 2px 20px 2px 2px;
     margin: 1px solid #888;
